codex-rs/tui/src/snapshots/codex_tui__context_window__tests__renders_collapsed_assistant_messages_row.snap
---
source: tui/src/context_window.rs
assertion_line: 445
expression: render_lines(&cell.display_lines(80))
---
/context

Context map
  ~6,000 tokens used of ~200,000 tokens (3.0%), ~194,000 tokens remaining.
  window▕█░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▏
  used  ▕████████████████████████████████████████████▏

  ■ Conversation 100.0%

  ■ Conversation   ~6,000 tokens   100.0% of used
    ██████████ Assistant messages (~6,000 tokens)
